<?xml version="1.0"?>
<package>
  <name>marty_msgs</name>
  <version>0.0.1</version>
  <description>Marty_msgs package containing ROS messages for Marty the Robot</description>

  <maintainer email="alex.bordallo@robotical.io">Alejandro Bordallo</maintainer>

  <license>Apache</license>

  <!-- <url type="website">http://wiki.ros.org/ros_marty</url> -->
  <url type="website">http://robotical.io/</url>

  <author email="alex.bordallo@robotical.io">Alejandro Bordallo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
